sources edit commit

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -7,3 +7,8 @@ sources:
     tables:
       - name: bike
       - name: weather
+  - name: us_crime
+    database: us_crime
+    schema: cybersyn
+    tables:
+      - name: CYBERSYN.URBAN_CRIME_INCIDENT_LOG
